--- a/MissionMiner/MissionMiner.csproj
+++ b/MissionMiner/MissionMiner.csproj
@@ -35,7 +35,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EveCom">
-      <HintPath>..\..\EveCom.dll</HintPath>
+      <HintPath>.\EveCom.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
